--- a/hello-world.html
+++ b/hello-world.html
@@ -13,14 +13,14 @@
     <p>We'll start with languages that the Epicodus staff could offer without using Google. </p>
 
     <ul>
-      <li> English: Hello, world! </li>
-      <li> Spanish:  Hola, mundo! </li>
-      <li> Japanese: Konnichiwa, sekai! </li>
-      <li> French: Bonjour, monde! </li>
-      <li> Kinyarwanda: Mwirwe, isi! </li>
-      <li> German: Guten tag, Welt! </li>
-      <li> Pig Latin: ello-hay, orld-way! </li>
+      <li> English: Hello, world! <img src="img/English_Flag.png" alt="picture of the Union Jack"></li>
+      <li> Spanish:  Hola, mundo! <img src="img/Spanish_Flag.png" alt="picture of the Union Jack"></li>
+      <li> Japanese: Konnichiwa, sekai! <img src="img/Japan_Flag.png" alt="picture of the Union Jack"></li>
+      <li> French: Bonjour, monde! <img src="img/French_Flag.png" alt="picture of the Union Jack"></li>
+      <li> Kinyarwanda: Mwirwe, isi! <img src="img/Kinyarwanda_Flag.png" alt="picture of the Union Jack"></li>
+      <li> German: Guten tag, Welt! <img src="img/German_Flag.png" alt="picture of the Union Jack"></li>
+      <li> Pig Latin: ello-hay, orld-way! <img src="img/Pig_Flag.jpg" alt="picture of the Union Jack"></li>
     </ul>
-    
+
   </body>
 </html>
