add basic css styles

--- a/index.html
+++ b/index.html
@@ -1,26 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
     <title>Hello World</title>
   </head>
   <body>
 
     <h1> Hello World </h1>
-    <h2> A program to greet the planet. </h2>
+    <h2> A webpage to greet the planet. </h2>
 
     <p>This page is an attempt to greet everyone on Earth using our various human languages.  We're interested to see how long our list can become.  <p>
 
-    <p>We'll start with languages that the Epicodus staff could offer without using Google. </p>
+    <table style="width:100%">
+      <tr>
+        <th><p> English: Hello, world! </p>
+        <img src="img/English_Flag.png" alt="picture of the Union Jack"></th>
+        <th><p> Spanish:  Hola, mundo! </p>
+        <img src="img/Spanish_Flag.png" alt="picture of the Spanish Flag"></th>
+        <th><p> Japanese: Konnichiwa, sekai! </p>
+        <img src="img/Japan_Flag.png" alt="picture of the Japanese Flag"></th>
+      </tr>
+      <br>
+      <tr>
+        <th><p> French: Bonjour, monde! </p>
+        <img src="img/French_Flag.png" alt="picture of the French Flag"></th>
+        <th><p> Kinyarwanda: Mwirwe, isi! </p>
+        <img src="img/Kinyarwanda_Flag.png" alt="picture of the Kinyarwanda Flag"></th>
+        <th><p> German: Guten tag, Welt! </p>
+        <img src="img/German_Flag.png" alt="picture of the German Flag"></th>
+      </tr>
+      <br>
+      <tr>
+        <th></th>
+        <th><p> Pig Latin: ello-hay, orld-way! </p>
+        <img src="img/Pig_Flag.jpg" alt="picture of a Pig Flag"></th>
+        <th></th>
+      </tr>
+    </table>
+    <br>
+    <br>
 
-    <ul>
-      <li> English: Hello, world! <img src="img/English_Flag.png" alt="picture of the Union Jack"></li>
-      <li> Spanish:  Hola, mundo! <img src="img/Spanish_Flag.png" alt="picture of the Union Jack"></li>
-      <li> Japanese: Konnichiwa, sekai! <img src="img/Japan_Flag.png" alt="picture of the Union Jack"></li>
-      <li> French: Bonjour, monde! <img src="img/French_Flag.png" alt="picture of the Union Jack"></li>
-      <li> Kinyarwanda: Mwirwe, isi! <img src="img/Kinyarwanda_Flag.png" alt="picture of the Union Jack"></li>
-      <li> German: Guten tag, Welt! <img src="img/German_Flag.png" alt="picture of the Union Jack"></li>
-      <li> Pig Latin: ello-hay, orld-way! <img src="img/Pig_Flag.jpg" alt="picture of the Union Jack"></li>
-    </ul>
 
   </body>
 </html>
