--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1> Hello World </h1>
     <h2> A webpage to greet the planet. </h2>
 
-    <p>This page is an attempt to greet everyone on Earth using our various human languages.  We're interested to see how long our list can become.  <p>
+    <p>This page is an attempt to greet everyone on Earth using our various human languages.  We're interested to see how long this list can become.  <p>
 
     <table style="width:100%">
       <tr>
@@ -20,7 +20,6 @@
         <th><p> Japanese: Konnichiwa, sekai! </p>
         <img src="img/Japan_Flag.png" alt="picture of the Japanese Flag"></th>
       </tr>
-      <br>
       <tr>
         <th><p> French: Bonjour, monde! </p>
         <img src="img/French_Flag.png" alt="picture of the French Flag"></th>
@@ -29,17 +28,17 @@
         <th><p> German: Guten tag, Welt! </p>
         <img src="img/German_Flag.png" alt="picture of the German Flag"></th>
       </tr>
-      <br>
       <tr>
-        <th></th>
+        <th><p> Danish: Hej, verden! </p>
+        <img src="img/Danish_Flag.png" alt="A picture of a Danish Flag"></th>
+        <th><p> Irish: Dia duit, domhan! </p>
+        <img src="img/Irish_Flag.png" alt="A picture of an Irish flag"></th>
         <th><p> Pig Latin: ello-hay, orld-way! </p>
         <img src="img/Pig_Flag.jpg" alt="picture of a Pig Flag"></th>
-        <th></th>
       </tr>
     </table>
     <br>
     <br>
-
 
   </body>
 </html>
