--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
     <title>Hello World</title>
   </head>
   <body>
